new: agents can now define default values for variables if not set via command line

--- a/examples/code-audit/agent.yml
+++ b/examples/code-audit/agent.yml
@@ -17,6 +17,10 @@ agent: >
 # the task
 task: find vulnerabilities in source code in {{ target_path }} and report your findings.
 
+# default values if --target-path is not provided
+defaults:
+  target_path: .
+
 # builtin tools to use
 using:
   - filesystem
