new: tools can now be directly called from the prompt by interpolation

--- a/examples/changelog/agent.yml
+++ b/examples/changelog/agent.yml
@@ -3,12 +3,15 @@ agent: >
   
   ## Guidance
 
-  - Start by using the get_new_commits tool to get a list of commits since the last release.
-  - Then use the create_changelog tool to generate a changelog for the new commits.
-  - Focus on the new features and fixes, group and summarize other changes into "Miscellaneous" or "Other".
+  - Use the create_changelog tool to generate a changelog for the new commits.
+  - Focus on the new features and major fixes.
+  - Group and summarize other minor changes into "Miscellaneous" or "Other".
   - Add relevant and catchy emojis but ONLY to important changes.
 
-task: Generate a changelog for the current project.
+task: >
+  Generate a changelog for these commits in the current project:
+
+  {{ get_new_commits() }}
 
 defaults:
   output: CHANGELOG.md
