misc: small fix or general refactoring i did not bother commenting

--- a/examples/changelog/agent.yml
+++ b/examples/changelog/agent.yml
@@ -3,6 +3,7 @@ agent: >
   
   ## Guidance
 
+  - Do not use the get_new_commits tool since you already have the list of commits.
   - Use the create_changelog tool to generate a changelog for the new commits.
   - Focus on the new features and major fixes.
   - Group and summarize other minor changes into "Miscellaneous" or "Other".
