--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ pyperclip = { version = "^1.9.0", optional = true }
 types-pyautogui = { version = "^0.9.3.20241230", optional = true }
 types-pyperclip = { version = "^1.9.0.20250218", optional = true }
 termcolor = "^2.5.0"
+requests = "^2.32.3"
+types-requests = "^2.32.0.20250328"
 
 [tool.poetry.extras]
 computer_use = [
