--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ version = "1.3.1"
 description = "The simple agent development kit."
 repository = "https://github.com/evilsocket/nerve"
 homepage = "https://github.com/evilsocket/nerve"
+documentation = "https://github.com/evilsocket/nerve/docs/index.md"
 authors = ["evilsocket <evilsocket@gmail.com>"]
 license = "GPL-3.0-or-later"
 readme = ["README.md", "LICENSE"]
