--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ uvicorn = "^0.34.0"
 fastapi = "^0.115.12"
 uuid = "^1.30"
 starlette = "^0.46.1"
+typer-di = "^0.1.3"
 
 [tool.poetry.extras]
 clipboard = ["pyperclip", "types-pyperclip"]
